--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
         </div>
         <div class="card-body profile">
           <div id="badges">
-            <a href="https://www.linkedin.com/in/simonverhoeven/">
-              <img src="https://img.shields.io/badge/LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge" />
+            <a href="https://github.com/simonverhoeven/">
+              <img src="https://img.shields.io/badge/Github-blue?style=for-the-badge&logo=github&logoColor=white" alt="Github Badge" />
             </a>
             <a href="https://twitter.com/simon_verhoeven">
               <img src="https://img.shields.io/badge/Twitter-blue?style=for-the-badge&logo=twitter&logoColor=white" alt="Twitter Badge" />
             </a>
             <a href="https://mastodon.social/@simonverhoeven">
               <img src="https://img.shields.io/badge/Mastodon-blue?style=for-the-badge&logo=mastodon&logoColor=white" alt="Mastodon Badge" />
+            </a>
+            <a href="https://www.linkedin.com/in/simonverhoeven/">
+              <img src="https://img.shields.io/badge/LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge" />
             </a>
           </div>
         </div>
