--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
           Simon Verhoeven
         </div>
         <div class="card-body profile">
-          <div id="badges">
+          <div>
+            <p>
+              I'm a Java developer living in Belgium, I'm always up for an interesting chat about technologies/challenges.
+            </p>
+          </div>
+          <div id="badges" class="text-center">
             <a href="https://github.com/simonverhoeven/">
               <img src="https://img.shields.io/badge/Github-blue?style=for-the-badge&logo=github&logoColor=white" alt="Github Badge" />
             </a>
