--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
           </div>
           <div id="badges" class="text-center">
-            <a href="https://github.com/simonverhoeven/">
+            <a href="https://www.simonverhoeven.dev">
               <img src="https://img.shields.io/badge/Github-blue?style=for-the-badge&logo=github&logoColor=white" alt="Github Badge" />
             </a>
             <a href="https://twitter.com/simon_verhoeven">
