--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
           </div>
           <div id="badges" class="text-center">
             <a href="https://www.simonverhoeven.dev">
-              <img src="https://img.shields.io/badge/Github-blue?style=for-the-badge&logo=github&logoColor=white" alt="Github Badge" />
+              <img src="https://img.shields.io/badge/Github-blue?logo=github&logoColor=white" alt="Github Badge" />
             </a>
             <a href="https://twitter.com/simon_verhoeven">
-              <img src="https://img.shields.io/badge/Twitter-blue?style=for-the-badge&logo=twitter&logoColor=white" alt="Twitter Badge" />
+              <img src="https://img.shields.io/badge/Twitter-blue?logo=twitter&logoColor=white" alt="Twitter Badge" />
             </a>
             <a href="https://mastodon.social/@simonverhoeven">
-              <img src="https://img.shields.io/badge/Mastodon-blue?style=for-the-badge&logo=mastodon&logoColor=white" alt="Mastodon Badge" />
+              <img src="https://img.shields.io/badge/Mastodon-blue?logo=mastodon&logoColor=white" alt="Mastodon Badge" />
             </a>
             <a href="https://www.linkedin.com/in/simonverhoeven/">
-              <img src="https://img.shields.io/badge/LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge" />
+              <img src="https://img.shields.io/badge/LinkedIn-blue?logo=linkedin&logoColor=white" alt="LinkedIn Badge" />
             </a>
           </div>
         </div>
