feat: update links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           </div>
           <div id="badges" class="text-center">
             <a href="https://www.simonverhoeven.dev">
-              <img src="https://img.shields.io/badge/Github-blue?logo=github&logoColor=white" alt="Github Badge" />
+              <img src="https://img.shields.io/badge/homepage-blue" alt="homepage" />
+            </a>
+            <a href="https://foojay.io/today/author/simon-verhoeven/">
+              <img src="https://img.shields.io/badge/foojay" alt="foojay" />
             </a>
             <a href="https://twitter.com/simon_verhoeven">
               <img src="https://img.shields.io/badge/Twitter-blue?logo=twitter&logoColor=white" alt="Twitter Badge" />
