fix: correct foojay shield

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <img src="https://img.shields.io/badge/homepage-blue" alt="homepage" />
             </a>
             <a href="https://foojay.io/today/author/simon-verhoeven/">
-              <img src="https://img.shields.io/badge/foojay" alt="foojay" />
+              <img src="https://img.shields.io/badge/foojay-blue" alt="foojay" />
             </a>
             <a href="https://twitter.com/simon_verhoeven">
               <img src="https://img.shields.io/badge/Twitter-blue?logo=twitter&logoColor=white" alt="Twitter Badge" />
